Add documentation for the project
